Fix text in HTML

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="img/ico.jpg" type="image/x-icon">
+    <link rel="icon" href="img/ico.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Cristina 🩷</title>
   </head>
@@ -37,8 +37,9 @@
       </div>
     </div>
     <h4 class="texto">
-      Mi amor por ti durará hasta que <br />
-      caiga el último pétalo ❤️‍🩹
+      Mi Cristina, el amor que tengo por ti durará
+      <br />
+      hasta que caiga el último pétalo ❤️‍🩹
     </h4>
   </body>
 </html>
